# s3d.old

./: Cargo.toml  README.md
src/: main.rs  server.rs
src/api/: api.rs  delete_bucket.rs  delete_object.rs  errors.rs  get_bucket.rs  get_object.rs  list_buckets.rs  list_objects.rs  mod.rs  put_bucket.rs  put_object.rs  server.rs  util.rs
src/api/ops/: delete_bucket.rs  delete_object.rs  get_bucket.rs  get_object.rs  list_buckets.rs  list_objects.rs  mod.rs  put_bucket.rs  put_object.rs
src/layers/: bucket_mem.rs  fs_layer.rs  mem_layer.rs  mock_layer.rs  mod.rs  s3_layer.rs
src/util/: mod.rs  util.rs
test/: awscli.sh  curl.sh
